--- a/css/style.css
+++ b/css/style.css
@@ -45,9 +45,10 @@ nav bar
   display: block;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  padding: 23px 16px;
   text-decoration: none;
   font-size: 25px;
+  letter-spacing: 1px;
 }
 
 .topnav a:hover {
@@ -61,6 +62,18 @@ nav bar
 
 .topnav .icon {
   display: none;
+}
+.fa-envelope{
+  margin-top: 5px;
+}
+ .fa-linkedin {
+  margin-top: 5px;
+}
+ .fa-wechat {
+  margin-top: 5px;
+}
+ .fa-facebook{
+  margin-top: 5px;
 }
 /*
 media screen
@@ -103,5 +116,3 @@ footer{
 }
 /*Media screen(min-w:600px)
 =========================*/
-
-
