--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -25,8 +25,10 @@ Project details
 }
 .project-cube{
   position: relative;
-  margin:5px;
+  margin:20px;
   background-color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+
 
 }
 .project-cube h3{
